MFH: Fixed bug #25963 (PostgreSQL error message include \n characters).